--- a/GangrenaShop/GangrenaShop.csproj
+++ b/GangrenaShop/GangrenaShop.csproj
@@ -82,6 +82,30 @@
     <Compile Include="Main\MenuPanelForm.Designer.cs">
       <DependentUpon>MenuPanelForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Productos\Categoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Productos\Categoria.Designer.cs">
+      <DependentUpon>Categoria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Productos\Clasificacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Productos\Clasificacion.Designer.cs">
+      <DependentUpon>Clasificacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Productos\Nuevo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Productos\Nuevo.Designer.cs">
+      <DependentUpon>Nuevo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Productos\ProductosFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Productos\ProductosFrm.Designer.cs">
+      <DependentUpon>ProductosFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PuntoVenta\PuntoVentaForm.cs">
@@ -113,6 +137,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main\MenuPanelForm.resx">
       <DependentUpon>MenuPanelForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Productos\Categoria.resx">
+      <DependentUpon>Categoria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Productos\Clasificacion.resx">
+      <DependentUpon>Clasificacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Productos\Nuevo.resx">
+      <DependentUpon>Nuevo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Productos\ProductosFrm.resx">
+      <DependentUpon>ProductosFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -167,7 +203,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Clientes\" />
-    <Folder Include="Videojuegos\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\degrado.jpg" />
