--- a/GangrenaShop/GangrenaShop.csproj
+++ b/GangrenaShop/GangrenaShop.csproj
@@ -58,6 +58,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clientes\ClientesFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Clientes\ClientesFrm.Designer.cs">
+      <DependentUpon>ClientesFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Clientes\Nuevo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Clientes\Nuevo.Designer.cs">
+      <DependentUpon>Nuevo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +120,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proveedores\Nuevo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Proveedores\Nuevo.Designer.cs">
+      <DependentUpon>Nuevo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Proveedores\ProveedoresFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Proveedores\ProveedoresFrm.Designer.cs">
+      <DependentUpon>ProveedoresFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PuntoVenta\PuntoVentaForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +150,12 @@
     <Compile Include="Usuarios\Nuevo.Designer.cs">
       <DependentUpon>Nuevo.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Clientes\ClientesFrm.resx">
+      <DependentUpon>ClientesFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Clientes\Nuevo.resx">
+      <DependentUpon>Nuevo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -160,6 +190,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Proveedores\Nuevo.resx">
+      <DependentUpon>Nuevo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Proveedores\ProveedoresFrm.resx">
+      <DependentUpon>ProveedoresFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PuntoVenta\PuntoVentaForm.resx">
       <DependentUpon>PuntoVentaForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -201,9 +237,7 @@
       <Name>Model</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Clientes\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\degrado.jpg" />
   </ItemGroup>
