--- a/GangrenaShop/GangrenaShop.csproj
+++ b/GangrenaShop/GangrenaShop.csproj
@@ -237,7 +237,9 @@
       <Name>Model</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\delete.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\degrado.jpg" />
   </ItemGroup>
